chore: make codepen script async

--- a/src/components/Codepen.astro
+++ b/src/components/Codepen.astro
@@ -31,4 +31,4 @@ const slug = slugMatches[1];
   >
 </p>
 
-<script src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+<script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
