--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -16,7 +16,7 @@ const { Content, headings } = await post.render();
 
 <BaseLayout {headings}>
   {post.data.image && <Image src={post.data.image} alt="" />}
-  <main class="max-w-prose m-auto px-3 mb-24">
+  <main class="max-w-prose mx-auto px-3 mb-24">
     <article-scroll>
       <h1 class="text-4xl mt-12">{post.data.title}</h1>
       <Content />
@@ -31,7 +31,12 @@ const { Content, headings } = await post.render();
 
   main :global(h3) {
     font-size: var(--font-size-xl);
-    margin-block-start: 2rem;
+    margin-block-start: 3rem;
+  }
+
+  main :global(h4) {
+    font-size: var(--font-size-lg);
+    margin-block-start: 2.5rem;
   }
 
   main :global(h2) {
@@ -64,9 +69,30 @@ const { Content, headings } = await post.render();
     line-height: 1.3;
   }
 
-  main :global(p) {
-    line-height: 1.5;
-    margin-block: 0.8rem;
+  main :global(ol) {
+    list-style: decimal;
+  }
+
+  main :global(ul) {
+    list-style: disc;
+  }
+
+  main :global(:is(ol, ul)) {
+    padding-inline-start: 1.5rem;
+  }
+
+  main :global(:is(p, li)) {
+    line-height: 1.7;
+    margin-block: 1.3rem;
+  }
+
+  main :global(a) {
+    color: var(--color-primary-light);
+    text-decoration: underline;
+  }
+
+  main :global(li) {
+    margin-block: 0.5rem;
   }
 
   main :global(pre) {
