feat: basic like button

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,21 +1,33 @@
 ---
-import { type CollectionEntry, getCollection } from "astro:content";
+import { type CollectionEntry } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
+import LikeButton from "../../components/LikeButton.astro";
 import { Image } from "astro:assets";
+import { getEntry } from "astro:content";
+import { getVisitorId } from "~/utils.server";
+import { Redis } from "@upstash/redis/cloudflare";
 
-export async function getStaticPaths() {
-  const posts = await getCollection("blog");
-  return posts.map((p) => ({ params: { slug: p.slug }, props: p }));
-}
+export const prerender = false;
 
 type Props = CollectionEntry<"blog">;
 
-const post = Astro.props;
+const post = await getEntry("blog", Astro.params.slug!);
+if (!post) return Astro.rewrite("/404");
+
+const redis = Redis.fromEnv(Astro.locals.runtime.env);
+const likes = await redis.scard(`likes:${post.slug}`);
+
+const visitorId = getVisitorId(Astro);
+const hasLiked = visitorId
+  ? Boolean(await redis.sismember(`likes:${post.slug}`, visitorId))
+  : false;
+
 const { Content, headings } = await post.render();
 ---
 
 <BaseLayout {headings}>
   <main class="max-w-prose mx-auto px-3 mb-24">
+    <LikeButton postSlug={post.slug} serverLikes={likes} {hasLiked} />
     <article-scroll>
       {
         post.data.image && (
