Revert "fix: remove unused redis call"
This reverts commit 121a409ef814f6ee87b572924ef1b50a74f4a1f6.

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -3,6 +3,8 @@ import { type CollectionEntry } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import LikeButton from "../../components/LikeButton.astro";
 import { Image } from "astro:assets";
+import { getLikes } from "~/utils.server";
+import { Redis } from "@upstash/redis/cloudflare";
 import { getCollection } from "astro:content";
 
 export async function getStaticPaths() {
@@ -14,6 +16,9 @@ type Props = CollectionEntry<"blog">;
 
 const post = Astro.props;
 if (!post) return Astro.rewrite("/404");
+
+const redis = Redis.fromEnv(Astro.locals.runtime.env);
+const likes = await getLikes(redis, post.slug);
 
 const { Content, headings } = await post.render();
 ---
