Revert "refactor: use client-side likes fetch instead"
This reverts commit b9512cc41bdc40c14d4c9b4e29c27bfb488122c8.

--- a/src/components/LikeButton.astro
+++ b/src/components/LikeButton.astro
@@ -1,13 +1,14 @@
 ---
 type Props = {
   postSlug: string;
+  serverLikes: number;
 };
 
-const { postSlug } = Astro.props;
+const { postSlug, serverLikes } = Astro.props;
 ---
 
 <button class="pt-20 data-[liked]:bg-red-500" data-post-slug={postSlug}
-  >Loading</button
+  >{serverLikes}</button
 >
 
 <script>
@@ -15,9 +16,7 @@ const { postSlug } = Astro.props;
 
   const button = document.querySelector("button[data-post-slug]")!;
   const postSlug = button.getAttribute("data-post-slug")!;
-  const { likes } = await actions.getLikes({ postSlug });
 
-  button.textContent = likes.toString();
   button.toggleAttribute("data-liked", Boolean(localStorage.getItem("isLike")));
 
   button.addEventListener("click", async () => {
