--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -3,18 +3,15 @@ import { type CollectionEntry } from "astro:content";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 import LikeButton from "../../components/LikeButton.astro";
 import { Image } from "astro:assets";
+import { getEntry } from "astro:content";
 import { getLikes } from "~/utils.server";
 import { Redis } from "@upstash/redis/cloudflare";
-import { getCollection } from "astro:content";
 
-export async function getStaticPaths() {
-  const posts = await getCollection("blog");
-  return posts.map((p) => ({ params: { slug: p.slug }, props: p }));
-}
+export const prerender = false;
 
 type Props = CollectionEntry<"blog">;
 
-const post = Astro.props;
+const post = await getEntry("blog", Astro.params.slug!);
 if (!post) return Astro.rewrite("/404");
 
 const redis = Redis.fromEnv(Astro.locals.runtime.env);
@@ -25,7 +22,7 @@ const { Content, headings } = await post.render();
 
 <BaseLayout {headings}>
   <main class="max-w-prose mx-auto px-3 mb-24">
-    <LikeButton postSlug={post.slug} />
+    <LikeButton postSlug={post.slug} serverLikes={likes} />
     <article-scroll>
       {
         post.data.image && (
