--- a/src/components/LikeButton.astro
+++ b/src/components/LikeButton.astro
@@ -1,4 +1,6 @@
 ---
+import { Icon } from "astro-icon/components";
+
 type Props = {
   postSlug: string;
   serverLikes: number;
@@ -7,36 +9,55 @@ type Props = {
 const { postSlug, serverLikes } = Astro.props;
 ---
 
-<button class="pt-20 data-[liked]:bg-red-500" data-post-slug={postSlug}
-  >{serverLikes}</button
->
+<like-button data-post-slug={postSlug} class="group/like">
+  <button
+    data-action="click:like-button#toggleLike"
+    class="mt-20 w-[2.5em] h-[2.5em] bg-gradient-to-br from-slate-600 to-slate-900 rounded-full flex items-center justify-center"
+  >
+    <div
+      class="group-data-[liked]/like:w-[75%] group-data-[liked]/like:h-[75%] w-[85%] h-[85%] rounded-full bg-gradient-to-br from-slate-800 to-slate-600 text-xl font-bold grid place-items-center transition-all -translate-y-[8%] group-data-[liked]/like:translate-y-0 ease-spring-5 duration-500"
+    >
+      <Icon
+        name="heart"
+        class="row-start-1 col-start-1 transition-colors text-slate-300 group-data-[liked]/like:text-red-400"
+      />
+      <Icon
+        name="heart"
+        class="row-start-1 col-start-1 transition-colors text-slate-300 group-data-[liked]/like:text-red-400 blur-0 group-data-[liked]/like:blur-[2px]"
+      />
+    </div>
+  </button>
+  <p data-target="like-button.text">{serverLikes}</p>
+</like-button>
 
 <script>
   import { actions } from "astro:actions";
+  import { controller, attr, target } from "@github/catalyst";
 
-  const button = document.querySelector("button[data-post-slug]")!;
-  const postSlug = button.getAttribute("data-post-slug")!;
+  @controller
+  class LikeButtonElement extends HTMLElement {
+    @attr liked = Boolean(localStorage.getItem("isLike"));
+    @attr postSlug = "";
+    @target text: HTMLElement;
 
-  button.toggleAttribute("data-liked", Boolean(localStorage.getItem("isLike")));
+    async toggleLike() {
+      this.liked = !Boolean(localStorage.getItem("isLike"));
 
-  button.addEventListener("click", async () => {
-    const isLike = !Boolean(localStorage.getItem("isLike"));
-    button.toggleAttribute("data-liked", isLike);
+      if (this.liked) {
+        localStorage.setItem("isLike", "true");
+      } else {
+        localStorage.removeItem("isLike");
+      }
 
-    if (isLike) {
-      localStorage.setItem("isLike", "true");
-    } else {
-      localStorage.removeItem("isLike");
+      const { data, error } = await actions.like.safe({
+        postSlug: this.postSlug,
+        isLike: this.liked,
+      });
+
+      // TODO: funny easter egg for too many requests
+      if (error) return;
+
+      this.text.textContent = data.likes.toString();
     }
-
-    const { data, error } = await actions.like.safe({
-      postSlug,
-      isLike: isLike,
-    });
-
-    // TODO: funny easter egg for too many requests
-    if (error) return;
-
-    button.textContent = data.likes.toString();
-  });
+  }
 </script>
